--- a/html/insufficientfund.html
+++ b/html/insufficientfund.html
@@ -21,18 +21,13 @@
       <div class="transation-page">
         <div class="content">
           <form>
-            <img
-              class="trans-icon"
-              src="../assets/bx_error.svg"
-              alt="success"
-            />
-            <div>
-              <p>Transaction failed</p>
-              <span>Your transaction could not be completed. 
-                Please try again later</span>
-            </div>
-            <button type="submit" class="checkout-button">Try again</button>
-            <a href="/index.html">close</a>
+            <img class="trans-icon" src="../assets/bx_error.svg" alt="caution" />
+            <p>
+                Payment declined due to insufficient fund. 
+                Fund your account and try again.
+            </p>
+            <button type="submit" class="checkout-button">Retry</button>
+            <a href="/index.html">Pay with mobile money</a>
           </form>
         </div>
       </div>
