--- a/html/paymentsuccess.html
+++ b/html/paymentsuccess.html
@@ -30,8 +30,8 @@
               <p>Payment successful</p>
               <span>You have paid the sum of 100CFA</span>
             </div>
-            <button type="submit" class="checkout-button">Pay CFA 100</button>
-            <a href="/index.html">Pay with mobile money</a>
+            <button type="submit" class="checkout-button">Make another payment</button>
+            <a href="/index.html">close</a>
           </form>
         </div>
       </div>
