--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   <body>
     <div class="checkout-container">
+      <button><a href="html/accountstatement/statement.html">Account Statement</a></button>
+    </div>
+    <div class="checkout-container">
       <button><a href="html\otppage.html">OTP Page</a></button>
       <button><a href="/html/insufficientfund.html">insufficient Fund</a></button>
       <button><a href="/html/paymentfailed.html">Payment Failed</a></button>
